syntax = "proto2";
package message.user;
message UserBreif {
    required int64 user_id = 1;
    required string nick_name = 2;
    optional int64 gender = 3;
    optional string phone = 4;
    optional string province = 5;
    optional string city = 6;
    optional string country = 7;
    required string avatar_url = 8;
    optional int64 is_robot = 9;
    optional string real_name = 10;
    optional string birthday = 11;
    optional string constellation = 12;
    optional string signature = 13;
    optional string has_order = 14;
}
